# rtkrover

./: CMakeLists.txt  Changelog.md  README.md  Todo.md  casterreader.cpp  casterreader.h  config.ini  crc24q.h  crtkrover.cpp  crtkrover.h  gpsdataparser.cpp  gpsdataparser.h  main.cpp  outputhandler.cpp  outputhandler.h  serialcom.cpp  serialcom.h  setup.sh
service/: rtkrover.service
